# cosyvoice-gui

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  environment.yml  main.py  pyproject.toml  run_gui.py
dashscope_audio/: __init__.py  _client.py  audio_post.py  config.py  cosyvoice_tts.py  llm.py  qwen_tts.py  voice_clone.py
data/: .gitkeep
docs/: cosyvoice.md  gui.md  voice_clone.md  voices.md
examples/: demo_cosyvoice.py  demo_qwen_tts.py  demo_voice_clone.py  list_voices_raw.py  qwen_compatible_mode.py
gui/: __init__.py  app.py  controller.py  heteronyms.py  instruction_util.py  models.py  params_panel.py  pinyin_util.py  style.py  widgets.py
tests/: test_error_recovery.py  test_instruction.py  test_llm.py  test_model_combo.py  test_pinyin_util.py
