[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dashscope-audio"
version = "0.1.0"
description = "阿里云百炼（DashScope）语音能力 requests 封装，含 CosyVoice 语音合成桌面应用（PySide6）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "zoe" }]
keywords = [
    "dashscope",
    "bailian",
    "cosyvoice",
    "qwen-tts",
    "tts",
    "voice-clone",
    "pyside6",
    "语音合成",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "requests>=2.31",
    "pypinyin>=0.51",
]

# 可选依赖：按需安装
#   pip install -e ".[gui]"       桌面应用（PySide6）
#   pip install -e ".[examples]"  examples/qwen_compatible_mode.py 用到的 openai
#   pip install -e ".[dev]"       运行测试
[project.optional-dependencies]
gui = ["PySide6>=6.6"]
examples = ["openai>=1.0"]
dev = ["pytest>=7.0"]

# 仅打包核心库；gui 为应用层，克隆后直接 python run_gui.py 运行
[tool.setuptools]
packages = ["dashscope_audio"]
